changed project in projects.json

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,7 +1,7 @@
 [{
         "id": "e71edeb9-d51a-475e-b3af-202211c2fca4",
         "title": "Arne Quinze",
-        "text": "Arne Quinze is a Belgian artist whose site we used as a basis for a project. I used this project to teach myself css grid.",
+        "text": "Arne Quinze is a Belgian artist whose site we used as a basis for a project.",
         "img": "img/projects/arnequinze.PNG",
         "link": "https://pgmgent-2021-atwork1.github.io/atwork-1_project_3-pgm-dieterschepers/index.html",
         "hightlight": false
@@ -9,17 +9,17 @@
     {
         "id": "fb8d4e0f-8af8-4179-b183-cfa942b4130c",
         "title": "Future Island",
-        "text": "Future Island was our final project during the first semester. We learned how to fill up a whole div with content in just one click. This is also how the following three buttons work.",
+        "text": "Future Island was our final project during the first period.",
         "img": "img/projects/futureisland.PNG",
         "link": "https://pgm-dieterschepers.github.io/future-island/",
         "hightlight": false
     },
     {
         "id": "609f82e9-f862-4973-8c9b-871efb4449c3",
-        "title": "HotRed (coming soon)",
-        "text": "HotRed (Coolblue, get it?) is THE final project of our first year. For this project we built a webshops in a team of two people. Starting from Sitemap, Wireframe, ...all the way to a fully functional result.",
-        "img": "img/projects/hotred.PNG",
-        "link": "#",
+        "title": "Movieland",
+        "text": "Movieland was the final project of our first year. I created an app where you could search for upcoming movies.",
+        "img": "img/projects/movie-app.PNG",
+        "link": "https://eindproject-947e2.web.app/",
         "hightlight": true
     }
 ]
